属性翻译Service